--- a/requirements.txt
+++ b/requirements.txt
@@ -22,4 +22,7 @@ rich>=10.0.0  # For enhanced CLI output
 inquirer>=2.7.0  # For interactive CLI prompts
 
 # Enhanced drive detection (optional)
-pywin32>=228  # For better Windows API access and network drive detection 
+pywin32>=228  # For better Windows API access and network drive detection
+
+# Safety features
+send2trash>=1.8.0  # For moving files to recycle bin instead of permanent deletion 
