--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "rich>=10.0.0",
     "inquirer>=2.7.0",
     "pywin32>=228",
+    "send2trash>=1.8.0",
 ]
 
 [project.optional-dependencies]
